--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+  redis:
+    image: redis
+    hostname: redis
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
@@ -16,3 +19,19 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - redis
+  worker:
+      build:
+        context: .
+        dockerfile: Dockerfile
+      image: celery
+      command: ['celery', '-A', 'poke.settings.celery.app', 'worker', '-l', 'info']
+      environment:
+        - BROKER_URL=redis://redis:6379/1
+        - RESULT_BACKEND=redis://redis:6379/0
+        - C_FORCE_ROOT=true
+      volumes:
+        - ./:/pok/
+      depends_on:
+        - db
+        - redis
