--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,6 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-  redis:
-    image: redis
-    hostname: redis
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
@@ -19,19 +16,12 @@ services:
       - "8000:8000"
     depends_on:
       - db
-      - redis
-  worker:
-      build:
-        context: .
-        dockerfile: Dockerfile
-      image: celery
-      command: ['celery', '-A', 'poke.settings.celery.app', 'worker', '-l', 'info']
-      environment:
-        - BROKER_URL=redis://redis:6379/1
-        - RESULT_BACKEND=redis://redis:6379/0
-        - C_FORCE_ROOT=true
-      volumes:
-        - ./:/pok/
-      depends_on:
-        - db
-        - redis
+  cron:
+    build: .
+    restart: unless-stopped
+    volumes:
+      - .:/code
+    depends_on:
+      - db
+      - web
+    command: crond -l 2 -f
